apps/shop/recommendation/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-recommendation-prod
spec:
  host: shop-recommendation.shop-recommendation.svc.cluster.local
  subsets:
  - name: shop-recommendation-prod
    labels:
      app: shop-recommendation
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-recommendation-prod-p1a
    labels:
      app: shop-recommendation
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
